performance regression in Heroes of the Storm with Mesa 19.1.1 & Polaris
Submitted by tem..@..il.com
Assigned to mes..@..op.org
Link to original bug (#110995)
Description
I lose at least 10 fps with 19.1.1 vs. 19.0 on RX 580.
19.1 (at least 168 fps): https://abload.de/img/screenshot_20190625_16akrb.png
19.1.1 (not more than 158fps): https://abload.de/img/screenshot_20190625_1kij8n.png
Performance regressions first occured in mesa-git around a week ago which is why I switched to stable 19.0. mesa-git was even worse though with ~150fps. Probably related to work regarding DCC?
linux 5.1 dxvk-git both LLVM 8 & 9
Version: 19.1